# mytest

./: 1.txt  README.txt  code.txt  fanghanshu.cpp  jihe.cpp  map.cpp  pyQt  readme.txt  readme2.txt
SpeechContest/: CMakeLists.txt  readme.txt  speech.cvs
SpeechContest/include/: speaker.h  speechManeger.h
SpeechContest/src/: CMakeLists.txt  main.cpp  speaker.cpp  speechManager.cpp
stl/: kaobei.cpp  list.cpp  pair.cpp  paixu.cpp  suanshu.cpp  yuangongfenzu.cpp
study_cmake/: CMakeLists.txt  run.sh
study_cmake/include/: myadd.h
study_cmake/src/: CMakeLists.txt  myadd.cpp
study_cmake/test/: main.cpp
te/: set.cpp  函数对象_仿函数.cpp  员工分组.cpp  查找.cpp  遍历.cpp
